# django-lb-workflow

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  package.json  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  core_concepts.rst  example.rst  index.rst  install.rst  make.bat  settings.rst
lbworkflow/: __init__.py  admin.py  apps.py  forms.py  settings.py  urls.py  wfdata.py
lbworkflow/core/: datahelper.py  exceptions.py  helper.py  sendmsg.py  transition.py  userparser.py
lbworkflow/flowgen/: __init__.py
lbworkflow/flowgen/app_template/: admin.py-tpl  (+4 more)
lbworkflow/migrations/: 0001_initial.py  0002_auto_20171019_0549.py  0003_auto_20200221_0438.py  0004_processreportlink_uuid.py  0005_auto_20211217_0304.py
lbworkflow/models/: __init__.py  config.py  runtime.py
lbworkflow/simplewf/: admin.py  forms.py  models.py  views.py  wfdata.py
lbworkflow/templatetags/: lbworkflow_tags.py
lbworkflow/tests/: models.py  permissions.py  settings.py  test_base.py  test_flowchart.py  test_flowgen.py  test_permissions.py  test_process.py  test_simplewf.py  test_transition.py  test_userparser.py  test_views_list.py  urls.py  wfdata.py
lbworkflow/views/: flowchart.py  forms.py  generics.py  helper.py  list.py  mixin.py  permissions.py  processinstance.py  transition.py
requirements/: requirements-optionals.txt  requirements.txt
testproject/: manage.py  requirements.txt  wfgen.py
testproject/testproject/: middleware.py  settings.py  urls.py  wsgi.py
(+46 files in other folders)
